--- a/Exercise-2b.html
+++ b/Exercise-2b.html
@@ -371,6 +371,148 @@ y &lt;- 6
 (z &lt;- x+y)</code></pre>
 <pre><code>## [1] 11</code></pre>
 </div>
+<div id="highlighting-module-7-8" class="section level2">
+<h2>Highlighting Module 7 + 8</h2>
+<p>Module 7: matrices, lists, and data frames Matrices are two
+dimensional data structures</p>
+<pre class="r"><code>(m &lt;- matrix(1:30, nrow=5, ncol=7))</code></pre>
+<pre><code>## Warning in matrix(1:30, nrow = 5, ncol = 7): data length [30] is not a
+## sub-multiple or multiple of the number of columns [7]</code></pre>
+<pre><code>##      [,1] [,2] [,3] [,4] [,5] [,6] [,7]
+## [1,]    1    6   11   16   21   26    1
+## [2,]    2    7   12   17   22   27    2
+## [3,]    3    8   13   18   23   28    3
+## [4,]    4    9   14   19   24   29    4
+## [5,]    5   10   15   20   25   30    5</code></pre>
+<pre class="r"><code>(n &lt;-(matrix(1:100, nrow=5, ncol=6, byrow = TRUE)))</code></pre>
+<pre><code>## Warning in matrix(1:100, nrow = 5, ncol = 6, byrow = TRUE): data length [100]
+## is not a sub-multiple or multiple of the number of columns [6]</code></pre>
+<pre><code>##      [,1] [,2] [,3] [,4] [,5] [,6]
+## [1,]    1    2    3    4    5    6
+## [2,]    7    8    9   10   11   12
+## [3,]   13   14   15   16   17   18
+## [4,]   19   20   21   22   23   24
+## [5,]   25   26   27   28   29   30</code></pre>
+<p>Notice that R recycles the numbers</p>
+<p>Arrays are n-dimensional data structures</p>
+<pre class="r"><code>a &lt;- array(dim=c(5, 6, 3), data=1:90)
+dim(a)</code></pre>
+<pre><code>## [1] 5 6 3</code></pre>
+<pre class="r"><code>class(a)</code></pre>
+<pre><code>## [1] &quot;array&quot;</code></pre>
+<pre class="r"><code>attributes(a)</code></pre>
+<pre><code>## $dim
+## [1] 5 6 3</code></pre>
+<pre class="r"><code>str(a)</code></pre>
+<pre><code>##  int [1:5, 1:6, 1:3] 1 2 3 4 5 6 7 8 9 10 ...</code></pre>
+<p>You can reference or extract select elements from vectors, matrices,
+and arrays by subsetting them using their index positions in what is
+known as brack notation <em>[]</em></p>
+</div>
+<div id="pulling-out-items-within-the-matrices-based-on-index-position" class="section level2">
+<h2>Pulling out items within the matrices based on index position</h2>
+<pre class="r"><code>v &lt;- 1:100
+v[33:35]</code></pre>
+<pre><code>## [1] 33 34 35</code></pre>
+<pre class="r"><code>v[(c(1, 4, 50))]</code></pre>
+<pre><code>## [1]  1  4 50</code></pre>
+<pre class="r"><code>cheers &lt;- c(&quot;c&quot;,&quot;h&quot;,&quot;e&quot;,&quot;e&quot;,&quot;r&quot;,&quot;s&quot;)
+cheers[c(2,5)]</code></pre>
+<pre><code>## [1] &quot;h&quot; &quot;r&quot;</code></pre>
+</div>
+<div id="lists-and-dataframes" class="section level2">
+<h2>Lists and dataframes</h2>
+<pre class="r"><code>s &lt;- c(&quot;this&quot;, &quot;is&quot;, &quot;a&quot;, &quot;vectors&quot;, &quot;of&quot;, &quot;strings&quot;)
+m &lt;- matrix(data=1:40, nrow=5, ncol=8)
+b &lt;- FALSE
+l &lt;- list(s, m, b)
+l &lt;-list(string = s, matrix = m, bool = b)
+attributes(l)</code></pre>
+<pre><code>## $names
+## [1] &quot;string&quot; &quot;matrix&quot; &quot;bool&quot;</code></pre>
+<pre class="r"><code>length(l)</code></pre>
+<pre><code>## [1] 3</code></pre>
+</div>
+<div id="subsetting-lists" class="section level2">
+<h2>Subsetting Lists</h2>
+<p>Now we are using double brackets! You can reference or extract
+elements from a list similarly to how you would from other data
+strucutre, except that you would use double brackets[[]] to reference a
+single element in the list</p>
+<pre class="r"><code>l[[2]]</code></pre>
+<pre><code>##      [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8]
+## [1,]    1    6   11   16   21   26   31   36
+## [2,]    2    7   12   17   22   27   32   37
+## [3,]    3    8   13   18   23   28   33   38
+## [4,]    4    9   14   19   24   29   34   39
+## [5,]    5   10   15   20   25   30   35   40</code></pre>
+<pre class="r"><code>l[[2]][2,6]</code></pre>
+<pre><code>## [1] 27</code></pre>
+<p>Note the difference between l[] and l[[]]</p>
+<pre class="r"><code>l[2]</code></pre>
+<pre><code>## $matrix
+##      [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8]
+## [1,]    1    6   11   16   21   26   31   36
+## [2,]    2    7   12   17   22   27   32   37
+## [3,]    3    8   13   18   23   28   33   38
+## [4,]    4    9   14   19   24   29   34   39
+## [5,]    5   10   15   20   25   30   35   40</code></pre>
+<pre class="r"><code>l[[2]]</code></pre>
+<pre><code>##      [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8]
+## [1,]    1    6   11   16   21   26   31   36
+## [2,]    2    7   12   17   22   27   32   37
+## [3,]    3    8   13   18   23   28   33   38
+## [4,]    4    9   14   19   24   29   34   39
+## [5,]    5   10   15   20   25   30   35   40</code></pre>
+<p>Single brackets will have $matrix. So if you are wanting to actually
+interact with the data within the matrix, you will have to use [[]]</p>
+<pre class="r"><code>df &lt;- data.frame(
+  firstName = c(&quot;Rick&quot;, &quot;Negan&quot;, &quot;Dwight&quot;, &quot;Maggie&quot;, &quot;Michonne&quot;), 
+  community = c(&quot;Aleandria&quot;, &quot;Saviors&quot;, &quot;Saviors&quot;, &quot;Hilltop&quot;,&quot;Saviors&quot;),
+  sex = c(&quot;M&quot;, &quot;M&quot;, &quot;M&quot;, &quot;F&quot;, &quot;F&quot;),
+  age = c(27, 28, 40, 23, 21)
+)</code></pre>
+<p>Data from Excel</p>
+<pre class="r"><code>## Not really sure what happened here in class. Whoops. Go back and rewatch video. 
+# library(readxl)
+# f &lt;- file.choose()
+# df &lt;- read_excel(
+#  path = f, sheet = 1, 
+#  col_names = TRUE
+# )
+# head(df)
+# class(df)
+# str(df)</code></pre>
+</div>
+<div id="getting-started-with-module-8" class="section level2">
+<h2>Getting Started with Module 8</h2>
+<pre class="r"><code>f &lt;- &quot;/Users/Kiersten/Downloads/CPDS-1960-2014-reduced.csv&quot;
+d &lt;- read.table(f, header= TRUE, sep = &quot;,&quot;, stringsAsFactors = FALSE)
+head(d)</code></pre>
+<pre><code>##   year   country gov_right1 gov_cent1 gov_left1 gov_party      elect vturn
+## 1 1960 Australia        100         0         0         1             95.5
+## 2 1961 Australia        100         0         0         1 09/12/1961  95.3
+## 3 1962 Australia        100         0         0         1             95.3
+## 4 1963 Australia        100         0         0         1 30/11/1963  95.7
+## 5 1964 Australia        100         0         0         1             95.7
+## 6 1965 Australia        100         0         0         1             95.7
+##   womenpar realgdpgr inflation debt_hist deficit ttl_labf labfopar unemp
+## 1        0        NA      3.73     40.15    0.46  4215.00       NA  1.25
+## 2        0     -0.64      2.29     38.62   -0.36  4286.00       NA  2.46
+## 3        0      5.77     -0.32     38.75   -0.79  4382.00       NA  2.32
+## 4        0      6.01      0.64     37.34   -0.51  4484.00       NA  1.87
+## 5        0      6.26      2.87     35.31   -0.08  4610.80    67.24  1.45
+## 6        0      4.99      3.41     53.99   -0.73  4745.95    67.66  1.36
+##       pop pop15_64 pop65 elderly
+## 1 10275.0   6296.5 874.9    8.51
+## 2 10508.2   6428.6 894.6    8.51
+## 3 10700.5   6571.5 913.6    8.54
+## 4 10906.9   6710.9 933.0    8.55
+## 5 11121.6   6857.3 948.1    8.52
+## 6 11340.9   7014.6 966.3    8.52</code></pre>
+<pre class="r"><code>## if running later on, these will be helpful: tidyverse, data.table
+# work through module 7 + 8</code></pre>
+</div>
 
 
 
